LUCENE-2653: document that ThaiWordFilter doesn't work on all JREs
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1028789 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -17,6 +17,10 @@ Documentation
    and recommend to use the equivalents in contrib/snowball if possible. 
    (Robert Muir, Uwe Schindler, Simon Willnauer)
 
+ * LUCENE-2653: Add documentation noting that ThaiWordFilter will not work
+   as expected on all JRE's. For example, on an IBM JRE, it does nothing.
+   (Robert Muir)
+
 ======================= Release 3.0.2 2010-06-18 =======================
 
 No changes.
