--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -51,6 +51,10 @@ Bug fixes
 * LUCENE-2384: Reset zzBuffer in StandardTokenizerImpl when lexer is reset.
   (Ruben Laguna via Uwe Schindler, sub-issue of LUCENE-2074) 
   
+* LUCENE-2658: Exceptions while processing term vectors enabled for multiple
+  fields could lead to invalid ArrayIndexOutOfBoundsExceptions.
+  (Robert Muir, Mike McCandless)
+
 Documentation
 
 * LUCENE-2239: Documented limitations in NIOFSDirectory and MMapDirectory due 
