LUCENE-2513: don't overwrite future commits when opening past commit in writeable IndexReader
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1028873 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,9 @@ Bug fixes
   throws an exception when term count exceeds doc count.
   (Mike McCandless, Uwe Schindler)
 
+* LUCENE-2513: when opening writable IndexReader on a not-current
+  commit, do not overwrite "future" commits.  (Mike McCandless)
+
 * LUCENE-2536: IndexWriter.rollback was failing to properly rollback
   buffered deletions against segments that were flushed (Mark Harwood
   via Mike McCandless)
