--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -16,6 +16,9 @@ Bug Fixes
  * LUCENE-2524: FastVectorHighlighter: use mod for getting colored tag.
    (Koji Sekiguchi)
 
+* LUCENE-2616: FastVectorHighlighter: out of alignment when the first value is
+  empty in multiValued field (Koji Sekiguchi)
+
 Documentation
 
  * LUCENE-2055: Add documentation noting that the Dutch and French stemmers
