--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -68,6 +68,10 @@ Bug fixes
   primary & secondary dirs share the same underlying directory.
   (Michael McCandless)
 
+* LUCENE-2365: IndexWriter.newestSegment (used normally for testing)
+  is fixed to return null if there are no segments.  (Karthick
+  Sankarachary via Mike McCandless)
+
 New features
 
 * LUCENE-2675: Add support for Lucene 3.0 stored field files also in 2.9.
