LUCENE-2556: Mixed up the changes
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1029024 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -72,6 +72,11 @@ Bug fixes
   is fixed to return null if there are no segments.  (Karthick
   Sankarachary via Mike McCandless)
 
+Optimizations
+
+* LUCENE-2556: Improve memory usage after cloning TermAttribute.
+  (Adriano Crestani via Uwe Schindler)
+
 Documentation
 
 * LUCENE-2239: Documented limitations in NIOFSDirectory and MMapDirectory due 
@@ -197,9 +202,6 @@ Optimizations
 
 * LUCENE-2360: Small speedup to recycling of reused per-doc RAM in
   IndexWriter (Robert Muir, Mike McCandless)
-
-* LUCENE-2556: Improve memory usage after cloning TermAttribute.
-  (Adriano Crestani via Uwe Schindler)
 
 ======================= Release 3.0.1 2010-02-26 =======================
 
