LUCENE-2098: speed up BaseCharFilter
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1029077 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -80,6 +80,9 @@ Optimizations
 * LUCENE-2556: Improve memory usage after cloning TermAttribute.
   (Adriano Crestani via Uwe Schindler)
 
+* LUCENE-2098: Improve the performance of BaseCharFilter, especially for
+  large documents.  (Robin Wojciki, Koji Sekiguchi, Robert Muir)
+
 Documentation
 
 * LUCENE-2239: Documented limitations in NIOFSDirectory and MMapDirectory due 
