Bugfix-only backport: LUCENE-2731, LUCENE-2732: Fix (charset) problems in XML loading in HyphenationCompoundWordTokenFilter
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1029374 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -18,6 +18,11 @@ Bug Fixes
 
  * LUCENE-2616: FastVectorHighlighter: out of alignment when the first value is
    empty in multiValued field (Koji Sekiguchi)
+   
+ * LUCENE-2731, LUCENE-2732: Fix (charset) problems in XML loading in
+   HyphenationCompoundWordTokenFilter (partial bugfix-only in 2.9 and 3.0,
+   full fix will be in later 3.1).
+   (Uwe Schinder)
 
 Documentation
 
