--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -77,6 +77,10 @@ Bug fixes
 
 * LUCENE-2730: Fix two rare deadlock cases in IndexWriter (Mike McCandless)
 
+* LUCENE-2744: CheckIndex was stating total number of fields,
+  not the number that have norms enabled, on the "test: field
+  norms..." output.  (Mark Kristensson via Mike McCandless)
+
 Optimizations
 
 * LUCENE-2556: Improve memory usage after cloning TermAttribute.
