LUCENE-2759: fix 2 cases where we could open doc stores for read when they were still open for write
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@1034980 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -81,6 +81,10 @@ Bug fixes
   not the number that have norms enabled, on the "test: field
   norms..." output.  (Mark Kristensson via Mike McCandless)
 
+* LUCENE-2759: Fixed two near-real-time cases where doc store files
+  may be opened for read even though they are still open for write.
+  (Mike McCandless)
+
 Optimizations
 
 * LUCENE-2556: Improve memory usage after cloning TermAttribute.
