LUCENE-2618: if normal merges run at same time as optimize, upgrade them to optimize merges if they involve segments marked for optimize
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@1035222 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -85,6 +85,10 @@ Bug fixes
   may be opened for read even though they are still open for write.
   (Mike McCandless)
 
+* LUCENE-2618: Fix rare thread safety issue whereby
+  IndexWriter.optimize could sometimes return even though the index
+  wasn't fully optimized (Mike McCandless)
+
 Optimizations
 
 * LUCENE-2556: Improve memory usage after cloning TermAttribute.
