LUCENE-2767: add 2 missing sync's in IW when it invokes IFD
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1035693 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -87,6 +87,10 @@ Bug fixes
   IndexWriter.optimize could sometimes return even though the index
   wasn't fully optimized (Mike McCandless)
 
+* LUCENE-2767: Fix thread safety issue in addIndexes(IndexReader[])
+  that could potentially result in index corruption.  (Mike
+  McCandless)
+
 Optimizations
 
 * LUCENE-2556: Improve memory usage after cloning TermAttribute.
