Backport LUCENE-2216: OpenBitSet.hashCode fix
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1038096 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -105,6 +105,9 @@ Bug fixes
   index size, when compound file is enabled (else 2X).  (Mike
   McCandless)
 
+* LUCENE-2216: OpenBitSet.hashCode returned different hash codes for
+  sets that only differed by trailing zeros. (Dawid Weiss, yonik)
+
 Optimizations
 
 * LUCENE-2556: Improve memory usage after cloning TermAttribute.
