LUCENE-2782: fix rare thread hazard with IW.commit
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1039743 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -115,6 +115,9 @@ Bug fixes
 * LUCENE-2216: OpenBitSet.hashCode returned different hash codes for
   sets that only differed by trailing zeros. (Dawid Weiss, yonik)
 
+* LUCENE-2782: Fix rare potential thread hazard with
+  IndexWriter.commit (Mike McCandless)
+
 API Changes
 
 * LUCENE-2773: LogMergePolicy accepts a double noCFSRatio (default =
