--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,7 +1,7 @@
 Lucene Change Log
 $Id$
 
-======================= 3.0 branch (not yet released) ==================
+======================= Release 3.0.3 2010-12-05 =======================
 
 Changes in runtime behavior
 
