--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -1,6 +1,6 @@
 Lucene contrib change Log
 
-======================= 3.0 branch (not yet released) ==================
+======================= Release 3.0.3 2010-12-05 =======================
 
 Bug Fixes
 
