prepare branch for next release
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1040996 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 Lucene Change Log
 $Id$
 
+======================= 3.0 branch (not yet released) ==================
+
+No changes.
+
 ======================= Release 3.0.3 2010-12-03 =======================
 
 Changes in runtime behavior
