--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 Lucene Change Log
 $Id$
 
+======================= 2.9 branch (not yet released) ==================
+
+No changes.
+
 ======================= Release 2.9.4 2010-12-03 =======================
 
 Changes in runtime behavior
