--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -1,6 +1,10 @@
 Lucene contrib change Log
 
-======================= Release 2.9.4 2010-12-03 =======================
+======================== 2.9 branch (not yet released) ==================
+
+No changes.
+
+====================== Release 2.9.4 2010-12-03 =======================
 
 Bug Fixes
 
