--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -2,7 +2,12 @@ Lucene contrib change Log
 
 ======================== 2.9 branch (not yet released) ==================
 
-No changes.
+Bug Fixes
+
+ * LUCENE-2855: contrib queryparser was using CharSequence as key in some internal 
+   Map instances, which was leading to incorrect behavior, since some CharSequence
+   implementors do not override hashcode and equals methods. Now the internal Maps 
+   are using String instead.
 
 ====================== Release 2.9.4 2010-12-03 =======================
 
