LUCENE-2855: Contrib queryparser should not use CharSequence as Map key
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_3_0@1060187 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -2,7 +2,12 @@ Lucene contrib change Log
 
 ======================= 3.0 branch (not yet released) ==================
 
-No changes.
+Bug Fixes
+
+ * LUCENE-2855: contrib queryparser was using CharSequence as key in some internal 
+   Map instances, which was leading to incorrect behavior, since some CharSequence
+   implementors do not override hashcode and equals methods. Now the internal Maps 
+   are using String instead.
 
 ======================= Release 3.0.3 2010-12-03 =======================
 
