--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,7 +3,10 @@ $Id$
 
 ======================= 3.0 branch (not yet released) ==================
 
-No changes.
+Bug fixes
+
+* LUCENE-2584: SegmentInfo.files() could hit ConcurrentModificationException if
+  called by multiple threads. (Alexander Kanarsky via Shai Erera)
 
 ======================= Release 3.0.3 2010-12-03 =======================
 
