LUCENE-2584: port fix to 2.9
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@1060398 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,7 +3,10 @@ $Id$
 
 ======================= 2.9 branch (not yet released) ==================
 
-No changes.
+Bug fixes
+
+* LUCENE-2584: SegmentInfo.files() could hit ConcurrentModificationException if
+  called by multiple threads. (Alexander Kanarsky via Shai Erera)
 
 ======================= Release 2.9.4 2010-12-03 =======================
 
