LUCENE-2874: Highlighting overlapping tokens outputs doubled words
git-svn-id: https://svn.apache.org/repos/asf/lucene/java/branches/lucene_2_9@1060791 13f79535-47bb-0310-9956-ffa450edef68

--- a/contrib/CHANGES.txt
+++ b/contrib/CHANGES.txt
@@ -9,6 +9,9 @@ Bug Fixes
    implementors do not override hashcode and equals methods. Now the internal Maps 
    are using String instead.
 
+ * LUCENE-2874: Highlighting overlapping tokens outputted doubled words.
+   (Pierre Gossé via Robert Muir)
+
 ====================== Release 2.9.4 2010-12-03 =======================
 
 Bug Fixes
